k8s/app/email-provider-kafka-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-provider-kafka-ui
  name: email-provider-kafka-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-provider-kafka-ui
  template:
    metadata:
      labels:
        app: email-provider-kafka-ui
    spec:
      containers:
        - env:
            - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
              value: email-provider-kafka-0.email-provider-kafka-service.default.svc.cluster.local:29092
            - name: KAFKA_CLUSTERS_0_NAME
              value: kraft-cluster-local
          image: provectuslabs/kafka-ui:v0.7.2
          name: email-provider-kafka-ui
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
