k8s/app/email-provider-mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-provider-mongodb
  name: email-provider-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-provider-mongodb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: email-provider-mongodb
    spec:
      containers:
        - image: mongo:8.0
          name: email-provider-mongodb
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-data
      restartPolicy: Always
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-data
