k8s/app/email-provider-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-provider-rabbitmq
  name: email-provider-rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-provider-rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: email-provider-rabbitmq
    spec:
      containers:
        - env:
            - name: RABBITMQ_DEFAULT_PASS
              value: admin
            - name: RABBITMQ_DEFAULT_USER
              value: admin
          image: rabbitmq:4.0-management
          name: email-provider-rabbitmq
          ports:
            - containerPort: 5672
              protocol: TCP
            - containerPort: 15672
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/rabbitmq
              name: rabbitmq-data
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data
