k8s/app/email-provider-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-provider-redis
  name: email-provider-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-provider-redis
  template:
    metadata:
      labels:
        app: email-provider-redis
    spec:
      containers:
        - args:
            - redis-server
            - --requirepass
            - redis
          image: redis:7.4.1-alpine
          name: email-provider-redis
          ports:
            - containerPort: 6379
              protocol: TCP
      restartPolicy: Always
