k8s/app/email-provider-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-provider-api-service
spec:
  ports:
    - name: "3500"
      port: 3500
      targetPort: 3500
  selector:
    app: email-provider-api
