k8s/app/email-provider-kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-provider-kafka-ui
  name: email-provider-kafka-ui
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: email-provider-kafka-ui
