k8s/app/email-provider-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-provider-mongodb-service
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    app: email-provider-mongodb
