k8s/app/email-provider-publisher-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-provider-publisher-api-service
spec:
  ports:
    - name: "3501"
      port: 3501
      targetPort: 3501
  selector:
    app: email-provider-publisher-api
