k8s/app/email-provider-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-provider-rabbitmq-service
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 15672
      targetPort: 15672
  selector:
    app: email-provider-rabbitmq
