k8s/app/email-provider-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: email-provider-redis
  name: email-provider-redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: email-provider-redis
