k8s/app/email-provider-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-provider-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "15s"
spec:
  ingressClassName: "nginx"
  rules:
  - host: app-email-provider
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: email-provider-api-service
            port:
              number: 3500
      - path: /broker-publisher(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: email-provider-publisher-api-service
            port:
              number: 3501
      - path: /kafka-exporter(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: email-provider-kafka-exporter-service
            port:
              number: 3502
